Fix spacing under last paragraph

--- a/zeppelin-web/app/styles/notebook.css
+++ b/zeppelin-web/app/styles/notebook.css
@@ -422,10 +422,6 @@
   margin-bottom: 5px !important;
 }
 
-.lastParagraph {
-    margin-bottom: 10px;
-}
-
 .allFields {
   margin-bottom: 10px;
 }
